# SlicerAugmentedReality

./: CMakeLists.txt  README.md
TrackedScreenAR/: CMakeLists.txt  qSlicerTrackedScreenARModule.cxx  qSlicerTrackedScreenARModule.h  qSlicerTrackedScreenARModuleWidget.cxx  qSlicerTrackedScreenARModuleWidget.h
TrackedScreenAR/Logic/: vtkSlicerTrackedScreenARLogic.cxx  vtkSlicerTrackedScreenARLogic.h
TrackedScreenAR/Resources/: qSlicerTrackedScreenARModule.qrc
TrackedScreenAR/Resources/UI/: qSlicerTrackedScreenARModuleWidget.ui
VideoPassthrough/: CMakeLists.txt  qSlicerVideoPassthroughModule.cxx  qSlicerVideoPassthroughModule.h  qSlicerVideoPassthroughModuleWidget.cxx  qSlicerVideoPassthroughModuleWidget.h
VideoPassthrough/Logic/: CMakeLists.txt  vtkSlicerVideoPassthroughLogic.cxx  vtkSlicerVideoPassthroughLogic.h
VideoPassthrough/Resources/: qSlicerVideoPassthroughModule.qrc
VideoPassthrough/Resources/UI/: qSlicerVideoPassthroughModuleWidget.ui
